# rust_embedding_lib

./: Cargo.toml  README.md  cbindgen.toml  rust_embedding_lib.h
bindings/objective-c/: RustEmbeddingBridge.h  RustEmbeddingBridge.m
src/: lib.rs
