[package]
name = "rust_embedding_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle = { package = "candle-core", version = "0.3.2" }
candle-nn = "0.3.2"
candle-transformers = "0.3.2"
tokenizers = "0.15.0"
lazy_static = "1.4.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[lib]
crate-type = ["cdylib", "rlib"]
